<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/details_header"
        android:text="@string/add_details"
        android:gravity="center_horizontal"
        android:padding="8sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:background="@color/background"
        android:textSize="32sp"/>

    <LinearLayout
        android:id="@+id/linear_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/light_blue"
        android:layout_below="@+id/details_header"
        android:padding="12sp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/please_choose_a_category"
            android:textColor="@color/background"
            android:textSize="12sp" />

        <Spinner
            android:id="@+id/category_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="12sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/unique_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linear_category"
        android:orientation="vertical"
        android:padding="12sp">

        <TextView
            android:id="@+id/param_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unique_name" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/unique_name_edit_text"
            android:background="@color/light_blue"
            android:hint="@string/unique_name_hint"
            android:maxLines="1"
            android:singleLine="true"
            android:padding="12sp"
            android:shadowColor="@color/grey"
            android:textSize="14sp"
            android:textColor="@color/background" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/submit_button"
        android:layout_below="@+id/unique_layout">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/param_recycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="12sp"
            android:scrollbarThumbVertical="@color/background">

        </android.support.v7.widget.RecyclerView>

    </LinearLayout>

    <Button
        android:id="@+id/submit_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/background"
        android:padding="16sp"
        android:text="Submit"
        android:textSize="16sp"
        android:textColor="@color/white" />

</RelativeLayout>