<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:lockview="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".activity.PatternActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/welcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="25sp"
            android:text="@string/welcome"
            android:textColor="#fff"
            android:textSize="36sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/delete_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12sp"
            android:gravity="end"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/delete"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginBottom="12sp"
                android:drawableEnd="@drawable/ic_find_replace_white_24dp"
                android:drawablePadding="4sp"
                android:gravity="center_vertical"
                android:padding="8sp"
                android:text="@string/delete_layout_text"
                android:textColor="#ffffff"
                android:textSize="16sp" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/header_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/pattern_id"
        android:gravity="center"
        android:text="@string/draw_pattern_text"
        android:textColor="#fff"
        android:textSize="20sp" />

    <com.amnix.materiallockview.MaterialLockView
        android:id="@+id/pattern_id"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:padding="12sp"
        lockview:theme="@style/Base.Animation.AppCompat.Dialog" />

</RelativeLayout>